[package]
name = "dijkstra-suite"
version = "0.1.0-alpha.1"
authors = ["Francesco Paoletti <paoletti.francesco@gmail.com>"]
edition = "2024"
description = "A Dijkstra's algorithm implementation that aims to be simple to use and fast to run"
license = "GPL-3.0"
license-file = "LICENSE"
repository = "https://github.com/TheShooter89/dijkstra-suite"
documentation = "https://docs.rs/dijkstra-suite"
homepage = "https://github.com/TheShooter89/dijkstra-suite"
readme = "README.md"
keywords = ["dijkstra", "pathfinding", "path", "graph", "algorithm"]
categories = ["algorithms"]

[dependencies]
